--- a/SuggestSong.html
+++ b/SuggestSong.html
@@ -1,4 +1,4 @@
-<form action="{{ url_for('addsong') }}" method="Post"> 
+<form action="{{ url_for('submitsong') }}" method="Post"> 
 	<label for="artist">Artist:</label><br>
 	<input type="text" name="Artist"><br>
 	<label for="song">Song:</label><br>
